fix: css modificato in registrazione e login perche' le immagini erano stretchate

--- a/src/main/webapp/styles/login.css
+++ b/src/main/webapp/styles/login.css
@@ -111,7 +111,7 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 .img{
-    width: 254px;
+    width: 262px;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     position: absolute;
